--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
            <section class="calltoaction">
             <div class="calltoactionyboton">
             <h1>Un futuro sostenible está en tus manos</h1>
-            <a href="https://www.google.com/intl/es-419_pe/forms/about/" class="boton">Consultar Aquí</a>
+            <a href="invierte.html" class="boton">Consultar Aquí</a>
             </div>
             </section>
             <section class="why">
